--- a/index.html
+++ b/index.html
@@ -8,41 +8,30 @@
 <body>
 <!-- Navbar -->
 <div id="logo">
-    <img src="images/logo-noglow.png" alt="WatchTogether Logo"/>
+    (INSERT LOGO HERE)
 </div>
 <ul id="navbar">
     <li class="navItem"><a href="" id="nav_home">Home</a></li>
-    <li class="navItem"><a href="" id="nav_create_room">Create Room</a></li>
-    <li class="navItem"><a href="" id="nav_join_room">Join Room</a></li>
-    <li class="navItem"><a href="" id="nav_browse">Browse</a></li>
-    <li class="navItem" style="float:right"><a href="" id="nav_register">Register</a></li>
-    <li class="navItem" style="float:right"><a href="#login_modal" rel="modal:open" id="nav_login">Login</a></li>
 </ul>
 <!-- Content -->
 <div id="pageContent">
-    <div id="indexRow_1">
+    <div>
         <div id="indexCol_1">
-            Welcome to WatchTogether! We strive to bring you the best experience when wanting to watch videos with friends.
+            left body
         </div>
-        <div id="indexCol_2"></div>
+        <div id="indexCol_2">middle body</div>
         <div id="indexCol_3">
             <div id="indexAccordion">
-                <h3>Features</h3>
+                <h3>header 1</h3>
                 <div>
                     <p>
-                        <ul>
-                            <li>Video sync with friends around the world</li>
-                            <li>Watch videos from YouTube</li>
-                            <li>*Watch custom web formatted videos from custom links</li>
-                            <li>Chat with friends while watching together</li>
-                            <li>* = not yet implemented</li>
-                        </ul>
+                        content 1
                     </p>
                 </div>
-                <h3>Room Screenshot</h3>
+                <h3>header 2</h3>
                 <div>
                     <p>
-                        <img src="images/example.png" alt="Example screenshot" width="100%"/>
+                        content 2
                     </p>
                 </div>
             </div>
@@ -56,16 +45,14 @@
 <footer>
     <div id="footer_default">
         <div class="footer_items">
-            <a href="tos.html">Terms of Service</a>
+            footer content left
         </div>
         <div class="footer_items">
-            <div id="contact">
-                <span id="newsletter_signup">Newsletter Sign-up</span><br/><br/>
-                <input type="email" placeholder="E-mail Address" id="contact_email" /><br/><br/>
-                <input type="button" value="Sign-up" id="contact_submit" />
-            </div>
+            footer content middle
         </div>
-        <div class="footer_items"></div>
+        <div class="footer_items">
+            footer content right
+        </div>
     </div>
 </footer>
 
@@ -76,7 +63,6 @@
 
 <link href="css/watch.css" rel="stylesheet" />
 <link href="css/index.css" rel="stylesheet" />
-<link href="css/video-js.css" rel="stylesheet" />
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script src="js/main.js"></script>
 <script src="js/index.js"></script>
@@ -88,19 +74,4 @@
 <!-- jQuery UI -->
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
-
-<!-- Modal content -->
-<div id="login_modal" class="modal">
-    <div id="login_form">
-        <div id="login_msg_area"></div>
-        <form>
-            <p><label for="login_username">Username</label><br/>
-                <input type="text" id="login_username" placeholder="Username" value="" autocomplete="username"/></p>
-            <p><label for="login_password">Password</label><br/>
-                <input type="password" id="login_password" placeholder="Password" value="" autocomplete="password"/> <br/></p>
-            <p><input type="button" id="login_submit" value="Login" /></p>
-            <p><input type="button" id="login_register" class="button_warning" value="Register" /></p>
-        </form>
-    </div>
-</div>
 </html>
