--- a/index.html
+++ b/index.html
@@ -8,20 +8,30 @@
 <body>
 <!-- Navbar -->
 <div id="logo">
-    (INSERT LOGO HERE)
+    <img src="Images/Logo.png" alt="Neighborly">
 </div>
 <ul id="navbar">
     <li class="navItem"><a href="" id="nav_home">Home</a></li>
+    <li class="navItem"><a href="" id="nav_home">Rental</a></li>
+    <li class="navItem"><a href="" id="nav_home">Login</a></li>
 </ul>
 <!-- Content -->
 <div id="pageContent">
     <div>
         <div id="indexCol_1">
-            left body
+            
         </div>
-        <div id="indexCol_2">middle body</div>
+        <div id="indexCol_2">
+            <h1>Welcome to Neighborly</h1>
+
+            <p>This is the place where you come and look for the tools that 
+                you have been looking for to finish that long awaited project
+
+            </p>
+
+        </div>
         <div id="indexCol_3">
-            <div id="indexAccordion">
+            <!-- <div id="indexAccordion">
                 <h3>header 1</h3>
                 <div>
                     <p>
@@ -34,7 +44,7 @@
                         content 2
                     </p>
                 </div>
-            </div>
+            </div> -->
         </div>
     </div>
 </div>
@@ -45,13 +55,13 @@
 <footer>
     <div id="footer_default">
         <div class="footer_items">
-            footer content left
+            <!-- footer content left -->
         </div>
         <div class="footer_items">
-            footer content middle
+            Copyright Neighborly
         </div>
         <div class="footer_items">
-            footer content right
+            <!-- footer content right -->
         </div>
     </div>
 </footer>
