fixed nav buttons

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 </div>
 <ul id="navbar">
     <li class="navItem"><a href="" id="nav_home">Home</a></li>
-    <li class="navItem"><a href="" id="nav_home">Rental</a></li>
-    <li class="navItem"><a href="" id="nav_home">Login</a></li>
+    <li class="navItem"><a href="" id="nav_rental">Rental</a></li>
+    <li class="navItem"><a href="" id="nav_login">Login</a></li>
 </ul>
 <!-- Content -->
 <div id="pageContent">
