--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 <body>
 <!-- Navbar -->
 <div id="logo">
-    <img src="Images/Logo.png" alt="Neighborly">
+    <img src="images/logo_trim.png" alt="Neighborly">
 </div>
 <ul id="navbar">
-    <li class="navItem"><a href="index.html" id="nav_home">Home</a></li>
-    <li class="navItem"><a href="" id="nav_home">Rental</a></li>
-    <li class="navItem"><a href="Login.html" id="nav_home">Login</a></li>
+    <li class="navItem"><a href="" id="nav_home">Home</a></li>
+    <li class="navItem"><a href="" id="nav_rental">Rental</a></li>
+    <li class="navItem"><a href="" id="nav_login">Login</a></li>
 </ul>
 <!-- Content -->
 <div id="pageContent">
