added register and updated some other things

--- a/Login.html
+++ b/Login.html
@@ -11,9 +11,9 @@
     <img src="images/logo_trim.png" alt="Neighborly">
 </div>
 <ul id="navbar">
-    <li class="navItem"><a href="" id="nav_home">Home</a></li>
-    <li class="navItem"><a href="" id="nav_rental">Rental</a></li>
-    <li class="navItem"><a href="" id="nav_login">Login</a></li>
+    <li class="navItem"><a href="index.html" id="nav_home">Home</a></li>
+    <li class="navItem"><a href="Rental.html" id="nav_rental">Rental</a></li>
+    <li class="navItem"><a href="Login.html" id="nav_login">Login</a></li>
 </ul>
 <!-- Content -->
 <div id="pageContent">
