updated some navbar stuff

--- a/Rental.html
+++ b/Rental.html
@@ -8,7 +8,7 @@
 <body>
 <!-- Navbar -->
 <div id="logo">
-    <img src="Images/Logo.png" alt="Neighborly">
+    <img src="Images/logo_trim.png" alt="Neighborly">
 </div>
 <ul id="navbar">
     <li class="navItem"><a href="index.html" id="nav_home">Home</a></li>
