--- a/index.html
+++ b/index.html
@@ -11,15 +11,10 @@
     <img src="images/logo_trim.png" alt="Neighborly">
 </div>
 <ul id="navbar">
-<<<<<<< Updated upstream
-    <li class="navItem"><a href="" id="nav_home">Home</a></li>
-    <li class="navItem"><a href="" id="nav_rental">Rental</a></li>
-    <li class="navItem"><a href="" id="nav_login">Login</a></li>
-=======
     <li class="navItem"><a href="index.html" id="nav_home">Home</a></li>
-    <li class="navItem"><a href="Rental.html" id="nav_home">Rental</a></li>
-    <li class="navItem"><a href="Login.html" id="nav_home">Login</a></li>
->>>>>>> Stashed changes
+    <li class="navItem"><a href="rental.html" id="nav_rental">Rental</a></li>
+    <li class="navItem"><a href="Login.html" id="nav_login">Login</a></li>
+
 </ul>
 <!-- Content -->
 <div id="pageContent">
