--- a/Register.html
+++ b/Register.html
@@ -12,8 +12,8 @@
 </div>
 <ul id="navbar">
     <li class="navItem"><a href="index.html" id="nav_home">Home</a></li>
-    <li class="navItem"><a href="rental.html" id="nav_home">Rental</a></li>
-    <li class="navItem"><a href="Login.html" id="nav_home">Login</a></li>
+    <li class="navItem"><a href="rental.html" id="nav_rental">Rental</a></li>
+    <li class="navItem"><a href="Login.html" id="nav_login">Login</a></li>
 </ul>
 <!-- Content -->
 <div id="pageContent">
