--- a/Rental.html
+++ b/Rental.html
@@ -12,39 +12,20 @@
 </div>
 <ul id="navbar">
     <li class="navItem"><a href="index.html" id="nav_home">Home</a></li>
-    <li class="navItem"><a href="Rental.html" id="nav_home">Rental</a></li>
-    <li class="navItem"><a href="Login.html" id="nav_home">Login</a></li>
+    <li class="navItem"><a href="Rental.html" id="nav_rental">Rental</a></li>
+    <li class="navItem"><a href="Login.html" id="nav_login">Login</a></li>
 </ul>
 <!-- Content -->
 <div id="pageContent">
-    <div>
-        <div id="indexCol_1">
-            
-        </div>
-        <div id="indexCol_2">
-            <h1>Welcome to Neighborly</h1>
-            <img src="Images/Hammer.jpg" alt="JohnsHammer">
-            <p>Something goes here
-            </p>
-
-        </div>
-        <div id="indexCol_3">
-            <!-- <div id="indexAccordion">
-                <h3>header 1</h3>
-                <div>
-                    <p>
-                        content 1
-                    </p>
-                </div>
-                <h3>header 2</h3>
-                <div>
-                    <p>
-                        content 2
-                    </p>
-                </div>
-            </div> -->
-        </div>
-    </div>
+    <h1>Neighborly Available Rentals</h1>
+    <img class="rental" src="images/Hammer.jpg" alt="JohnsHammer">
+    <img class="rental" src="images/Hammer.jpg" alt="JohnsHammer">
+    <img class="rental" src="images/Hammer.jpg" alt="JohnsHammer">
+    <img class="rental" src="images/Hammer.jpg" alt="JohnsHammer"><br>
+    <img class="rental" src="images/Hammer.jpg" alt="JohnsHammer">
+    <img class="rental" src="images/Hammer.jpg" alt="JohnsHammer">
+    <img class="rental" src="images/Hammer.jpg" alt="JohnsHammer">
+    <img class="rental" src="images/Hammer.jpg" alt="JohnsHammer">
 </div>
 
 <!--End of Content -->
@@ -70,7 +51,7 @@
 <!-- References -->
 
 <link href="css/watch.css" rel="stylesheet" />
-<link href="css/index.css" rel="stylesheet" />
+<link href="css/rental.css" rel="stylesheet" />
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script src="js/main.js"></script>
 <script src="js/index.js"></script>
