--- a/Rental.html
+++ b/Rental.html
@@ -17,15 +17,48 @@
 </ul>
 <!-- Content -->
 <div id="pageContent">
+
     <h1>Neighborly Available Rentals</h1>
     <img class="rental" src="images/Hammer.jpg" alt="JohnsHammer">
+    <p>JohnsHammer</p>
+    <p>John Smith (4.9/5)</p>
+    <p>Location: Charlotte, NC</p>
+    <p>593 Reviews</p>
     <img class="rental" src="images/Hammer.jpg" alt="JohnsHammer">
+    <p>JohnsHammer</p>
+    <p>John Smith (4.9/5)</p>
+    <p>Location: Charlotte, NC</p>
+    <p>593 Reviews</p>
     <img class="rental" src="images/Hammer.jpg" alt="JohnsHammer">
-    <img class="rental" src="images/Hammer.jpg" alt="JohnsHammer"><br>
+    <p>JohnsHammer</p>
+    <p>John Smith (4.9/5)</p>
+    <p>Location: Charlotte, NC</p>
+    <p>593 Reviews</p>
     <img class="rental" src="images/Hammer.jpg" alt="JohnsHammer">
+    <p>JohnsHammer</p>
+    <p>John Smith (4.9/5)</p>
+    <p>Location: Charlotte, NC</p>
+    <p>593 Reviews</p><br>
     <img class="rental" src="images/Hammer.jpg" alt="JohnsHammer">
+    <p>JohnsHammer</p>
+    <p>John Smith (4.9/5)</p>
+    <p>Location: Charlotte, NC</p>
+    <p>593 Reviews</p>
     <img class="rental" src="images/Hammer.jpg" alt="JohnsHammer">
+    <p>JohnsHammer</p>
+    <p>John Smith (4.9/5)</p>
+    <p>Location: Charlotte, NC</p>
+    <p>593 Reviews</p>
     <img class="rental" src="images/Hammer.jpg" alt="JohnsHammer">
+    <p>JohnsHammer</p>
+    <p>John Smith (4.9/5)</p>
+    <p>Location: Charlotte, NC</p>
+    <p>593 Reviews</p>
+    <img class="rental" src="images/Hammer.jpg" alt="JohnsHammer">
+    <p>JohnsHammer</p>
+    <p>John Smith (4.9/5)</p>
+    <p>Location: Charlotte, NC</p>
+    <p>593 Reviews</p>
 </div>
 
 <!--End of Content -->
