Fixed nav bar, fixed rental page.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <ul id="navbar">
     <li class="navItem"><a href="index.html" id="nav_home">Home</a></li>
     <li class="navItem"><a href="rental.html" id="nav_rental">Rental</a></li>
-    <li class="navItem"><a href="Login.html" id="nav_login">Login</a></li>
+    <li class="navItem"><a href="login.html" id="nav_login">Login</a></li>
 
 </ul>
 <!-- Content -->
