changed watch.css to global.css

--- a/rental.html
+++ b/rental.html
@@ -149,7 +149,7 @@
 
 <!-- References -->
 
-<link href="css/watch.css" rel="stylesheet" />
+<link href="css/global.css" rel="stylesheet" />
 <link href="css/rental.css" rel="stylesheet" />
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script src="js/main.js"></script>
