--- a/login.html
+++ b/login.html
@@ -51,7 +51,7 @@
 
 <!-- References -->
 
-<link href="css/watch.css" rel="stylesheet" />
+<link href="css/global.css" rel="stylesheet" />
 <link href="css/index.css" rel="stylesheet" />
 <link href="css/login.css" rel="stylesheet" />
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
