Changed navbar, loading from main.js now

--- a/index.html
+++ b/index.html
@@ -7,15 +7,9 @@
 </head>
 <body>
 <!-- Navbar -->
-<div id="logo">
-    <img src="images/logo_trim.png" alt="Neighborly">
+<div id="navbar">
+<!-- Load with JS in main.js -->
 </div>
-<ul id="navbar">
-    <li class="navItem"><a href="index.html" id="nav_home">Home</a></li>
-    <li class="navItem"><a href="rental.html" id="nav_rental">Rental</a></li>
-    <li class="navItem"><a href="login.html" id="nav_login">Login</a></li>
-
-</ul>
 <!-- Content -->
 <div id="pageContent">
     <div>
