--- a/register.html
+++ b/register.html
@@ -7,12 +7,9 @@
 </head>
 <body>
 <!-- Navbar -->
-<div id="logo">
-    <img src="images/logo_trim.png" alt="Neighborly">
+<div id="navbar">
+    <!-- Load with JS in main.js -->
 </div>
-<ul id="navbar">
-
-</ul>
 <!-- Content -->
 <div id="pageContent">
     <div id="registerContent">
